// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv variable export "frodo esv variable export --all": should export all variables to a single file 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export --all": should export all variables to a single file: allVariables.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-blue-piller": {
      "_id": "esv-blue-piller",
      "description": "Zion membership criteria.",
      "expressionType": "bool",
      "lastChangeDate": "2024-07-05T20:01:11.78347Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "false",
    },
    "esv-ipv4-cidr-access-rules": {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules: { "allow": [ "address/mask" ] }",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:13.987057Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{ "allow": [ "145.118.0.0/16", "132.35.0.0/16", "101.226.0.0/16", "99.72.28.182/32" ] }",
    },
    "esv-nebuchadnezzar-crew": {
      "_id": "esv-nebuchadnezzar-crew",
      "description": "The crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "array",
      "lastChangeDate": "2024-07-05T20:01:05.216699Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "["Morpheus","Trinity","Link","Tank","Dozer","Apoc","Cypher","Mouse","Neo","Switch"]",
    },
    "esv-nebuchadnezzar-crew-structure": {
      "_id": "esv-nebuchadnezzar-crew-structure",
      "description": "The structure of the crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:07.343325Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{"Captain":"Morpheus","FirstMate":"Trinity","Operator":["Link","Tank"],"Medic":"Dozer","Crewmen":["Apoc","Cypher","Mouse","Neo","Switch"]}",
    },
    "esv-neo-age": {
      "_id": "esv-neo-age",
      "description": "Neo's age in the matrix.",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T20:01:09.53586Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "28",
    },
    "esv-number": {
      "_id": "esv-number",
      "description": "test number",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T19:42:20.943131Z",
      "lastChangedBy": "volker.scheuber@forgerock.com",
      "loaded": true,
      "value": "1.134",
    },
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
    "esv-test-var-pi": {
      "_id": "esv-test-var-pi",
      "description": "This is another test variable.",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T20:00:43.340528Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
    "esv-test-var-pi-string": {
      "_id": "esv-test-var-pi-string",
      "description": "This is another test variable.",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:16.11117Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
    "esv-test-variable-light": {
      "_id": "esv-test-variable-light",
      "description": "Test variable containing the speed of light in meters per second (as an int).",
      "expressionType": "int",
      "lastChangeDate": "2023-12-14T15:34:13.446903Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "value": "299792458",
    },
    "esv-trinity-phone": {
      "_id": "esv-trinity-phone",
      "description": "In the opening of The Matrix (1999), the phone number Trinity is calling from is traced to (312)-555-0690",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:03.141204Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "(312)-555-0690",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-blue-piller.variable.json 1`] = `
{
  "variable": {
    "esv-blue-piller": {
      "_id": "esv-blue-piller",
      "description": "Zion membership criteria.",
      "expressionType": "bool",
      "lastChangeDate": "2024-07-05T20:01:11.78347Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "false",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-ipv4-cidr-access-rules.variable.json 1`] = `
{
  "variable": {
    "esv-ipv4-cidr-access-rules": {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules: { "allow": [ "address/mask" ] }",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:13.987057Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{ "allow": [ "145.118.0.0/16", "132.35.0.0/16", "101.226.0.0/16", "99.72.28.182/32" ] }",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-nebuchadnezzar-crew.variable.json 1`] = `
{
  "variable": {
    "esv-nebuchadnezzar-crew": {
      "_id": "esv-nebuchadnezzar-crew",
      "description": "The crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "array",
      "lastChangeDate": "2024-07-05T20:01:05.216699Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "["Morpheus","Trinity","Link","Tank","Dozer","Apoc","Cypher","Mouse","Neo","Switch"]",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-nebuchadnezzar-crew-structure.variable.json 1`] = `
{
  "variable": {
    "esv-nebuchadnezzar-crew-structure": {
      "_id": "esv-nebuchadnezzar-crew-structure",
      "description": "The structure of the crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:07.343325Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{"Captain":"Morpheus","FirstMate":"Trinity","Operator":["Link","Tank"],"Medic":"Dozer","Crewmen":["Apoc","Cypher","Mouse","Neo","Switch"]}",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-neo-age.variable.json 1`] = `
{
  "variable": {
    "esv-neo-age": {
      "_id": "esv-neo-age",
      "description": "Neo's age in the matrix.",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T20:01:09.53586Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "28",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-number.variable.json 1`] = `
{
  "variable": {
    "esv-number": {
      "_id": "esv-number",
      "description": "test number",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T19:42:20.943131Z",
      "lastChangedBy": "volker.scheuber@forgerock.com",
      "loaded": true,
      "value": "1.134",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-test-var.variable.json 1`] = `
{
  "variable": {
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-test-var-pi.variable.json 1`] = `
{
  "variable": {
    "esv-test-var-pi": {
      "_id": "esv-test-var-pi",
      "description": "This is another test variable.",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T20:00:43.340528Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-test-var-pi-string.variable.json 1`] = `
{
  "variable": {
    "esv-test-var-pi-string": {
      "_id": "esv-test-var-pi-string",
      "description": "This is another test variable.",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:16.11117Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-test-variable-light.variable.json 1`] = `
{
  "variable": {
    "esv-test-variable-light": {
      "_id": "esv-test-variable-light",
      "description": "Test variable containing the speed of light in meters per second (as an int).",
      "expressionType": "int",
      "lastChangeDate": "2023-12-14T15:34:13.446903Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "value": "299792458",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --all-separate --no-metadata --directory variableExportTestDir3 --no-decode": should export all variables to separate files in the directory variableExportTestDir3: variableExportTestDir3/esv-trinity-phone.variable.json 1`] = `
{
  "variable": {
    "esv-trinity-phone": {
      "_id": "esv-trinity-phone",
      "description": "In the opening of The Matrix (1999), the phone number Trinity is calling from is traced to (312)-555-0690",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:03.141204Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "(312)-555-0690",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export --variable-id esv-test-var": should export the variable with variable id "esv-test-var" 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export --variable-id esv-test-var": should export the variable with variable id "esv-test-var": esv-test-var.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-blue-piller.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-blue-piller": {
      "_id": "esv-blue-piller",
      "description": "Zion membership criteria.",
      "expressionType": "bool",
      "lastChangeDate": "2024-07-05T20:01:11.78347Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "false",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-ipv4-cidr-access-rules.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-ipv4-cidr-access-rules": {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules: { "allow": [ "address/mask" ] }",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:13.987057Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{ "allow": [ "145.118.0.0/16", "132.35.0.0/16", "101.226.0.0/16", "99.72.28.182/32" ] }",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-nebuchadnezzar-crew.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-nebuchadnezzar-crew": {
      "_id": "esv-nebuchadnezzar-crew",
      "description": "The crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "array",
      "lastChangeDate": "2024-07-05T20:01:05.216699Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "["Morpheus","Trinity","Link","Tank","Dozer","Apoc","Cypher","Mouse","Neo","Switch"]",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-nebuchadnezzar-crew-structure.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-nebuchadnezzar-crew-structure": {
      "_id": "esv-nebuchadnezzar-crew-structure",
      "description": "The structure of the crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:07.343325Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{"Captain":"Morpheus","FirstMate":"Trinity","Operator":["Link","Tank"],"Medic":"Dozer","Crewmen":["Apoc","Cypher","Mouse","Neo","Switch"]}",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-neo-age.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-neo-age": {
      "_id": "esv-neo-age",
      "description": "Neo's age in the matrix.",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T20:01:09.53586Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "28",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-number.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-number": {
      "_id": "esv-number",
      "description": "test number",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T19:42:20.943131Z",
      "lastChangedBy": "volker.scheuber@forgerock.com",
      "loaded": true,
      "value": "1.134",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-test-var.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-test-var-pi.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-test-var-pi": {
      "_id": "esv-test-var-pi",
      "description": "This is another test variable.",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T20:00:43.340528Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-test-var-pi-string.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-test-var-pi-string": {
      "_id": "esv-test-var-pi-string",
      "description": "This is another test variable.",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:16.11117Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-test-variable-light.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-test-variable-light": {
      "_id": "esv-test-variable-light",
      "description": "Test variable containing the speed of light in meters per second (as an int).",
      "expressionType": "int",
      "lastChangeDate": "2023-12-14T15:34:13.446903Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "value": "299792458",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -A": should export all variables to separate files: esv-trinity-phone.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-trinity-phone": {
      "_id": "esv-trinity-phone",
      "description": "In the opening of The Matrix (1999), the phone number Trinity is calling from is traced to (312)-555-0690",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:03.141204Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "(312)-555-0690",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -NaD variableExportTestDir2": should export all variables to a single file in the directory variableExportTestDir2 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export -NaD variableExportTestDir2": should export all variables to a single file in the directory variableExportTestDir2: variableExportTestDir2/allVariables.variable.json 1`] = `
{
  "variable": {
    "esv-blue-piller": {
      "_id": "esv-blue-piller",
      "description": "Zion membership criteria.",
      "expressionType": "bool",
      "lastChangeDate": "2024-07-05T20:01:11.78347Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "false",
    },
    "esv-ipv4-cidr-access-rules": {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules: { "allow": [ "address/mask" ] }",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:13.987057Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{ "allow": [ "145.118.0.0/16", "132.35.0.0/16", "101.226.0.0/16", "99.72.28.182/32" ] }",
    },
    "esv-nebuchadnezzar-crew": {
      "_id": "esv-nebuchadnezzar-crew",
      "description": "The crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "array",
      "lastChangeDate": "2024-07-05T20:01:05.216699Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "["Morpheus","Trinity","Link","Tank","Dozer","Apoc","Cypher","Mouse","Neo","Switch"]",
    },
    "esv-nebuchadnezzar-crew-structure": {
      "_id": "esv-nebuchadnezzar-crew-structure",
      "description": "The structure of the crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:07.343325Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{"Captain":"Morpheus","FirstMate":"Trinity","Operator":["Link","Tank"],"Medic":"Dozer","Crewmen":["Apoc","Cypher","Mouse","Neo","Switch"]}",
    },
    "esv-neo-age": {
      "_id": "esv-neo-age",
      "description": "Neo's age in the matrix.",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T20:01:09.53586Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "28",
    },
    "esv-number": {
      "_id": "esv-number",
      "description": "test number",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T19:42:20.943131Z",
      "lastChangedBy": "volker.scheuber@forgerock.com",
      "loaded": true,
      "value": "1.134",
    },
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
    "esv-test-var-pi": {
      "_id": "esv-test-var-pi",
      "description": "This is another test variable.",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T20:00:43.340528Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
    "esv-test-var-pi-string": {
      "_id": "esv-test-var-pi-string",
      "description": "This is another test variable.",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:16.11117Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
    "esv-test-variable-light": {
      "_id": "esv-test-variable-light",
      "description": "Test variable containing the speed of light in meters per second (as an int).",
      "expressionType": "int",
      "lastChangeDate": "2023-12-14T15:34:13.446903Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "value": "299792458",
    },
    "esv-trinity-phone": {
      "_id": "esv-trinity-phone",
      "description": "In the opening of The Matrix (1999), the phone number Trinity is calling from is traced to (312)-555-0690",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:03.141204Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "(312)-555-0690",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -Ni esv-test-var -D variableExportTestDir1": should export the variable with variable id "esv-test-var" into the directory named variableExportTestDir1 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export -Ni esv-test-var -D variableExportTestDir1": should export the variable with variable id "esv-test-var" into the directory named variableExportTestDir1: variableExportTestDir1/esv-test-var.variable.json 1`] = `
{
  "variable": {
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -a --file my-allVariables.variable.json --no-decode": should export all variables to a single file named my-allVariables.variable.json 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export -a --file my-allVariables.variable.json --no-decode": should export all variables to a single file named my-allVariables.variable.json: my-allVariables.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-blue-piller": {
      "_id": "esv-blue-piller",
      "description": "Zion membership criteria.",
      "expressionType": "bool",
      "lastChangeDate": "2024-07-05T20:01:11.78347Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "false",
    },
    "esv-ipv4-cidr-access-rules": {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules: { "allow": [ "address/mask" ] }",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:13.987057Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{ "allow": [ "145.118.0.0/16", "132.35.0.0/16", "101.226.0.0/16", "99.72.28.182/32" ] }",
    },
    "esv-nebuchadnezzar-crew": {
      "_id": "esv-nebuchadnezzar-crew",
      "description": "The crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "array",
      "lastChangeDate": "2024-07-05T20:01:05.216699Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "["Morpheus","Trinity","Link","Tank","Dozer","Apoc","Cypher","Mouse","Neo","Switch"]",
    },
    "esv-nebuchadnezzar-crew-structure": {
      "_id": "esv-nebuchadnezzar-crew-structure",
      "description": "The structure of the crew of the Nebuchadnezzar hovercraft.",
      "expressionType": "object",
      "lastChangeDate": "2024-07-05T20:01:07.343325Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "{"Captain":"Morpheus","FirstMate":"Trinity","Operator":["Link","Tank"],"Medic":"Dozer","Crewmen":["Apoc","Cypher","Mouse","Neo","Switch"]}",
    },
    "esv-neo-age": {
      "_id": "esv-neo-age",
      "description": "Neo's age in the matrix.",
      "expressionType": "int",
      "lastChangeDate": "2024-07-05T20:01:09.53586Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "28",
    },
    "esv-number": {
      "_id": "esv-number",
      "description": "test number",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T19:42:20.943131Z",
      "lastChangedBy": "volker.scheuber@forgerock.com",
      "loaded": true,
      "value": "1.134",
    },
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
    "esv-test-var-pi": {
      "_id": "esv-test-var-pi",
      "description": "This is another test variable.",
      "expressionType": "number",
      "lastChangeDate": "2024-07-05T20:00:43.340528Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
    "esv-test-var-pi-string": {
      "_id": "esv-test-var-pi-string",
      "description": "This is another test variable.",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:16.11117Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "3.1415926",
    },
    "esv-test-variable-light": {
      "_id": "esv-test-variable-light",
      "description": "Test variable containing the speed of light in meters per second (as an int).",
      "expressionType": "int",
      "lastChangeDate": "2023-12-14T15:34:13.446903Z",
      "lastChangedBy": "phales@trivir.com",
      "loaded": true,
      "value": "299792458",
    },
    "esv-trinity-phone": {
      "_id": "esv-trinity-phone",
      "description": "In the opening of The Matrix (1999), the phone number Trinity is calling from is traced to (312)-555-0690",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T20:01:03.141204Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "(312)-555-0690",
    },
  },
}
`;

exports[`frodo esv variable export "frodo esv variable export -i esv-test-var -f my-esv-test-var.variable.json --no-decode": should export the variable with variable id "esv-test-var" into file named my-esv-test-var.variable.json 1`] = `""`;

exports[`frodo esv variable export "frodo esv variable export -i esv-test-var -f my-esv-test-var.variable.json --no-decode": should export the variable with variable id "esv-test-var" into file named my-esv-test-var.variable.json: my-esv-test-var.variable.json 1`] = `
{
  "meta": Any<Object>,
  "variable": {
    "esv-test-var": {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "string",
      "lastChangeDate": "2024-07-05T22:37:25.846244Z",
      "lastChangedBy": "Frodo-SA-1701393386423",
      "loaded": true,
      "value": "this is a test variable",
    },
  },
}
`;
